--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 # Log file
 *.log
+*.lst
+*.dump
+*.dumpstream
 
 # BlueJ files
 *.ctxt
@@ -18,6 +21,7 @@
 *.zip
 *.tar.gz
 *.rar
+target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
